Pomodoro Clock's structure ready to start the development.

--- a/src/bower.json
+++ b/src/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "calculatorMS",
-  "description": "CalculatorMS - FreeCodeCamp's Front-End Project",
+  "name": "Pomodoro Clock",
+  "description": "Pomodoro Clock - FreeCodeCamp's Front-End Project",
   "main": "gulpfile.js",
   "authors": [
     "Michael Silva"
