--- a/src/bower.json
+++ b/src/bower.json
@@ -19,7 +19,8 @@
     "angular": "1.6.2",
     "angular-route": "^1.6.2",
     "compass-sass-mixins": "*",
-    "css-ripple-effect": "^1.0.6"
+    "css-ripple-effect": "^1.0.6",
+    "moment": "^2.17.1"
   },
   "devDependencies": {}
 }
